Fonts segunda parte

--- a/Fuentes/styles.css
+++ b/Fuentes/styles.css
@@ -9,19 +9,18 @@
 
 body{
     font-family: cursive; /*Cambia el estilo de fuente, se pueden colocar hasta cuatro valores, por si la primera seleccionada no la encuentra y asi sucesivamente*/
-    font-size: 30px; /*Cambia el tamaño de la fuente*/
+    font-size: 1.7rem; /*Cambia el tamaño de la fuente*/
 }
 
 .card{
-    width: 700px;
-    height: 900px;
-    max-height: 90%;
+    width: 70%;
+    height: 90%;
     margin: 0 auto;
     margin-top: 80px;
     background-color: rgb(0, 174, 255);
     color: #fff;
     padding: 40px 20px;
-    border-radius: 6%;
+    border-radius: 25px;
 }
 
 .img{
@@ -31,15 +30,19 @@ body{
 }
 
 .title{
-    margin-bottom: 15px;
-    border-color: #fff;
+    margin: 0 auto;
     letter-spacing: normal; /*Modifica el espaciado entre letras, Acepta valores negativos*/
     hyphens: auto; /*Solo sirve para palabras cortas. Esto coloca automaticamente un guión, más un salto de línea. Controloando así el desborde del texto dentro de su contenedor*/
     overflow-wrap: break-word; /*Esta propiedad limita a cualquier palabra de desbordar de su contenedor*/
     text-align: center; /*Esta propiedad permite centrar el texto*/
     font-family: Arial, Helvetica, sans-serif;
-    font-weight: 900; /*Con esto modificamos el grosor de la fuente*/
+    /*font-weight: 900; /*Con esto modificamos el grosor de la fuente*/
+    border: 2px solid #fff;
+     /*Permite definir el alto de la linea de los textos, es decir, modifica el interlineado del texto*/
+    padding: 5px;
+    box-sizing: border-box;
 }
+
 
 .paragraph{
     text-transform: uppercase; /*Convierte todas la letras en mayusculas*/
