--- a/Animaciones/Selectores Combiandores/styles.css
+++ b/Animaciones/Selectores Combiandores/styles.css
@@ -41,7 +41,7 @@ body{
 */
 
 .btn-red:hover ~ .button{
-    transform: translate(100%);
+    transform: translate(100%); /*Al pasar el mouse por encima del boton rojo, los hermanos generales moveran*/
 }
 
 .btn-blue{
